# validator_flask

./: Makefile  README.md  pyproject.toml
tests/: test_app.py
validator_flask/: .gitignore  app.py  data.py  validator.py
validator_flask/templates/courses/: index.html  new.html
